--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>My second repo</title>
 </head>
 <body>
+    <h1>I can push codes now</h1>
+    <h3>I am a genius</h3>
+    <h3>
+        New Command
+    </h3>
     
 </body>
 </html>
